--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>FF Player Picker</title>
-  <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
 	<div class="navbar">
@@ -25,6 +25,8 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
